# PJ-Y86-64-Simulator

./: .gitignore  CMakeLists.txt  Presentation.md  README.md  bench_result.json  test.sh
apps/tui_ftxui/: main.cpp
apps/y86sim/: CMakeLists.txt  main.cpp
benchmark/: bench_result.json  bench_y86.py
build_tui/: CMakeCache.txt  Makefile  cmake_install.cmake  y86sim
include/: types.h  worker.h
include/y86/: cpu.h  loader.h  stepper.h
minic/: minic_to_y86.py  out.json  run.sh  test.mc
minic/examples/: cmp.mc  sum.mc
minic/yo/: cmp.yo  sum.yo  test.yo
src/: cpu.cpp  loader.cpp  stepper.cpp  worker.cpp
